--- a/jobs/ContinuousTest/Jenkinsfile
+++ b/jobs/ContinuousTest/Jenkinsfile
@@ -56,11 +56,11 @@ node{
                 def TESTS = "${env.TESTS}"
                 def repo_dir = pwd() + "/build-config"
                 def function_test = load("build-config/jobs/FunctionTest/FunctionTest.groovy")
-                try{
-                    function_test.manifestTest(TESTS, env.stash_manifest_name, env.stash_manifest_path, repo_dir)
+//                try{
+                function_test.manifestTest(TESTS, env.stash_manifest_name, env.stash_manifest_path, repo_dir)
 //                } finally{
 //                    function_test.archiveArtifactsToTarget("FunctionTest")
-                }
+//                }
             }
         } finally{
             def shareMethod = load("build-config/jobs/ShareMethod.groovy")
