--- a/build-release-tools/lib/manifest.json
+++ b/build-release-tools/lib/manifest.json
@@ -51,7 +51,7 @@
         {
             "branch": "", 
             "commit-id": "",
-            "repository": "https://github.com/RackHD/RackHD.git"
+            "repository": "https://github.com/johren/RackHD.git"
         }, 
         {
             "branch": "", 
