Print out config file Add payload Bring down verbosity to 4 in run_tests.py call. Disable smoke tests Re-enable all tests Deleted 'test.sh'

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -83,6 +83,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
           service isc-dhcp-server start
           service rsyslog stop
           sudo service mongodb restart
+          echo "=====  Config file begin ====="
+          cat /opt/monorail/config.json
+          echo "=====  Config file end ====="
           echo manual | sudo tee /etc/init/rsyslog.override
           if [ "#{ENV['MULTI']}" ]; then
             pm2 logs > /home/vagrant/log/build/vagrant.log &
